--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ python:
 # command to install dependencies
 install: "python setup.py install"
 # command to run tests
-script: travis_tests.sh
+script: ./travis_tests.sh
