--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: python
 python:
   - "3.5.1"
 # command to install dependencies
-install: "python setup.py install"
+install: "python setup.py develop"
 # command to run tests
 script: ./travis_tests.sh
